Fix icons getting cut off on hover
Order icon properties in a class

--- a/app/style.css
+++ b/app/style.css
@@ -44,6 +44,16 @@ body {
 .outlined {
     text-shadow: 0px 0px 3px black;
 }
+.icons {
+    height: 32px;
+    width: 32px;
+    padding: 6px;
+    cursor: hand;
+}
+.icons:hover {
+    background-color: rgba(255,255,255,0.3);
+    border-radius: 50%;
+}
 
 /* Left */
 #left {
@@ -137,16 +147,6 @@ input[type=text]:focus:not([readonly])+label {
     justify-content: flex-start;
     margin: 10px 0 0 10px;
 }
-#mid-search-icon {
-    width: 24px;
-    height: 24px;
-    padding: 8px 8px 8px 8px;
-    cursor: hand;
-}
-#mid-search-icon:hover {
-    background-color: rgba(255,255,255,0.3);
-    border-radius: 50%;
-}
 #mid-search-box {
     display: none;
     margin: 6px 0 0 10px;
@@ -198,15 +198,7 @@ input[type=text]:focus:not([readonly])+label {
 }
 #right-todo-icon {
     margin: 0 10px 0 0;
-    height: 24px;
-    width: 24px;
-    padding: 8px 8px 8px 8px;
-    cursor: hand;
     order: 2;
-}
-#right-todo-icon:hover {
-    background-color: rgba(255,255,255,0.3);
-    border-radius: 50%;
 }
 #mid-quote {
     width: 50vw;
@@ -290,15 +282,7 @@ input#my-focus:checked+label:after {
     font-weight: bold;
 }
 #left-settings-icon {
-    height: 24px;
-    width: 24px;
-    padding: 8px 8px 8px 8px;
-    cursor: hand;
     margin: 0 3px 0 10px;
-}
-#left-settings-icon:hover {
-    background-color: rgba(255,255,255,0.3);
-    border-radius: 50%;
 }
 .hideDivs {
     visibility: hidden;
